Added application topology section. Naming